fixed contrast view for events/calendar pg

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -41,3 +41,7 @@ body {
 #big-calendar {
   z-index: 1;
 }
+
+.active-events-view {
+  color: $bright-blue;
+}
